添加注释门店

--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -83,7 +83,7 @@
             <div class="gax-head">
               <p class="gax text-center">国安侠<span id="gaxcount">加载中...</span>&nbsp;人</p>
               <p class="col-sm-6 no-padding">城市：<span id="citycount">加载中...</span>个</p>
-              <p class="col-sm-6 no-padding">门店：<span id="storecount">加载中...</span>个</p>
+              <p class="col-sm-6 no-padding"><span class="text-red" title="已进驻国安侠门店数量" style="padding-left: 0px; font-size: 16px; font-weight: bold; cursor: pointer">！</span>门店：<span id="storecount">加载中...</span>个</p>
               <ul class="col-sm-12 no-padding">
                 <li>人均日送单量：&nbsp;<span id="avgSendOrder">加载中...</span>&nbsp;单</li>
                 <li>人均日工作时间：&nbsp;<span id="avgWorkTime">加载中...</span>&nbsp;小时</li>
