--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -34,7 +34,10 @@
     .report .gax{font-size: 24px; background-color: #fff; border-radius: 6px; color: #7e37ed; margin-bottom: 20px;}
     .report .gax span{font-size: 40px; font-weight: bold; padding-left: 10px;}
     .report .col-sm-6{font-size: 20px;}
-    .report .col-sm-6 span{padding: 0 5px;}
+    .report ul{margin: 40px 0 0 0; line-height: 30px; font-size: 14px;}
+    .report ul li{list-style: disc;}
+    .report ul span{font-size: 22px; font-family: 'SimHei'; padding-left: 5px;}
+
     .report ul{margin: 40px 0 0 0; line-height: 30px;}
     .progress{margin-top: 10px;}
 
