修改下载样式

--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -50,6 +50,30 @@
         -webkit-animation-name:myfirst;-webkit-animation-duration:2s;-webkit-animation-timing-function:linear;-webkit-animation-iteration-count:infinite;-webkit-animation-direction:alternate;-webkit-animation-play-state:running;
         /* Opera: */
         -o-animation-name:myfirst;-o-animation-duration:2s;-o-animation-timing-function:linear;-o-animation-delay:2s;-o-animation-iteration-count:infinite;-o-animation-direction:alternate;-o-animation-play-state:running;}
+    @keyframes myfirst
+    {
+        0%   {left:0px; top:0px;}
+        50%  {left:0px; top:10px;}
+        100% {left:0px; top:0px;}
+    }
+    @-moz-keyframes myfirst /* Firefox */
+    {
+        0%   {left:0px; top:0px;}
+        50%  {left:0px; top:10px;}
+        100% {left:0px; top:0px;}
+    }
+    @-webkit-keyframes myfirst /* Safari and Chrome */
+    {
+        0%   {left:0px; top:0px;}
+        50%  {left:0px; top:10px;}
+        100% {left:0px; top:0px;}
+    }
+    @-o-keyframes myfirst /* Opera */
+    {
+        0%   {left:0px; top:0px;}
+        50%  {left:0px; top:10px;}
+        100% {left:0px; top:0px;}
+    }
   </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
