修改总部首页排名页面

--- a/WebContent/crm/headquarters_rank.html
+++ b/WebContent/crm/headquarters_rank.html
@@ -116,6 +116,7 @@
 				            	<div class="clearfix">
 				            	<input type="hidden" id="citySelected"/>
 				            	<input type="hidden" id="citySelectedName"/>
+				            	<input type="hidden" id="tabFlag"/>
 				            	<!-- 
 				                	<div class="form-group col-lg-3">
 						              <select class="form-control select2" id="be_date1" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);" disabled="true">
