--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -160,6 +160,8 @@
                                     <dl class="col-sm-3" id="user_model">
                                         <dt><i></i>用户模型</dt>
                                         <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
+                                        <dd style="position:relative"><a href="javascript:goToUserAnalysis()"><span class="fa fa-user"></span>用户分析</a>
+                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl> 
                                 </div>
                             </div>
