修改用户运营分析显示文案

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -136,7 +136,7 @@
                     <div class="box-body">
                         <div class="col-sm-12">
                             <div id="main2" style="height: 350px;"></div>
-                            <p style="padding-top: 5px;">口径说明：真实用户=会员、历史消费3次以上，无效用户=消费1次且从未自己下单的用户，僵尸用户=2018年未消费，待确认用户=注册人数-真实用户-无效用户-僵尸用户。</p>
+                            <p style="padding-top: 5px;">口径说明：真实用户=社员、历史消费3次以上，无效用户=消费1次且从未自己下单的用户，僵尸用户=2018年未消费，待确认用户=注册人数-真实用户-无效用户-僵尸用户。</p>
                         </div>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                     textAlign: 'center',
                 },
             },{
-                text: '无效用户占比',
+                text: '未消费用户占比',
                 left: '80%',
                 bottom: '10%',
                 textAlign: 'center',
